# ipfs-smart-contract

./: Cargo.toml  README.md  run.sh
src/: configuration_parameters.rs  main.rs
src/contract/: contract.sol  mod.rs
src/ipfs/: display.rs  mod.rs  upload.rs
test-bed/: run.sh  test-data.txt
