[package]
name = "ipfs_smart_contract"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[profile.bench]
debug = true

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ipfs-api = { version = "0.12.0", features = ["with-hyper"], default-features = false }
futures = "0.3"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
clap = "2.31.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
